fix css  bag on ios

--- a/src/assets/scss/global.scss
+++ b/src/assets/scss/global.scss
@@ -11,6 +11,7 @@ html, body {
   font-family: Roboto, sans-serif;
   font-size: 14px;
   position: relative;
+  padding: 0px;
 }
 
 #root {
