--- a/src/components/Board/AddCard/AddCard.scoped.scss
+++ b/src/components/Board/AddCard/AddCard.scoped.scss
@@ -43,11 +43,10 @@
     .input {
       input[type='text'] {
         background-color: #FFFFFF;
-        box-shadow: inset 0 0 0 2px #0079bf;
+        border: 2px solid #0079bf;
         border-radius: 3px;
         width: 100%;
         outline: none;
-        border: none;
         resize: none;
         padding: 6px;
         font-weight: 700;
@@ -59,11 +58,10 @@
     .textarea {
       textarea {
         background-color: #FFFFFF;
-        box-shadow: inset 0 0 0 2px #0079bf;
+        border: 2px solid #0079bf;
         border-radius: 3px;
         width: 100%;
         outline: none;
-        border: none;
         resize: none;
         padding: 6px;
         transition: all 0.3s linear;
