--- a/src/components/Board/Card/Card.scoped.scss
+++ b/src/components/Board/Card/Card.scoped.scss
@@ -1,7 +1,7 @@
 @import "../../../assets/scss/varibles";
 
 .card {
-  padding: 5px 10px;
+  padding: 10px;
   background: #FFFFFF;
   box-shadow: 0px 1px 4px rgba(9, 45, 66, 0.25);
   border-radius: 3px;
