--- a/src/page/RegistrationnPage/RegistrationnPage.scoped.scss
+++ b/src/page/RegistrationnPage/RegistrationnPage.scoped.scss
@@ -62,6 +62,7 @@
   input[type=password] {
     background-color: #f6f6f6;
     border: none;
+    outline:none;
     color: #0d0d0d;
     padding: 15px 32px;
     text-align: center;
@@ -70,20 +71,20 @@
     font-size: 16px;
     margin: 15px 0px;
     width: 100%;
-    border: 2px solid #f6f6f6;
-    transition: all 0.5s ease-in-out;
     border-radius: 5px 5px 5px 5px;
 
 
     &:focus {
+      outline:2px solid #0079bf;
       background-color: #fff;
-      border-bottom: 2px solid #5fbae9;
     }
 
     &::placeholder {
+      font-size: 16px;
       color: #cccccc;
     }
   }
+
 
   button[type=submit] {
     background-color: #56baed;
